--- a/style.css
+++ b/style.css
@@ -15,3 +15,22 @@
 .bg-gradient {
     background-image: linear-gradient(90deg, #140F6B 50%, #4840D6 50%);
 }
+
+.faq{
+    cursor: pointer;
+}
+.question{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.answer{
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 1.4s ease;
+}
+.faq.active .answer{
+    max-height: 300px;
+}
+
+
