--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700;800;900&display=swap'); 
 /* main css  */
-* {
+
+ *,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {
     font-family: 'Inter', sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 .text-gradient{ 
     background-image: linear-gradient(90deg, #4F46E5 -18.06%, #4F46E5 15.97%, #3B70F7 50%);
     background-size: 100%;
@@ -33,4 +40,42 @@
     max-height: 300px;
 }
 
-
+.wrapper{
+    box-sizing: content-box;
+    display: flex;
+}
+.words{
+    overflow: hidden;
+}
+.words span{
+    display: block;
+    height: 100%;
+    padding-left: 8px;
+    animation: spin_words 8s infinite;
+}
+@keyframes spin_words{
+    10%{
+        transform: translateY(-112%);
+    }
+    25%{
+        transform: translateY(-100%);
+    }
+    35%{
+        transform: translateY(-212%);
+    }
+    50%{
+        transform: translateY(-200%);
+    }
+    60%{
+        transform: translateY(-312%);
+    }
+    75%{
+        transform: translateY(-300%);
+    }
+    85%{
+        transform: translateY(-412%);
+    }
+    100%{
+        transform: translateY(-400%);
+    }
+}
